# HomeWork

./: .travis.yml  CMakeLists.txt  README.md
examples/: main.cpp
include/: DoubleHashTable.h  LinearHashTable.h  LinkedHashTable.h
sources/: DoubleHashTable.cpp  LinearHashTable.cpp  LinkedHashTable.cpp
tests/: DoubleHashTable_FindMaxMin.cpp  DoubleHashTable_Insert.cpp  DoubleHashTable_Remove.cpp  DoubleHashTable_Search.cpp  Insert_DoubleHashTable.cpp  LinearHashTable_FindMaxMin.cpp  LinearHashTable_Insert.cpp  LinearHashTable_Remove.cpp  LinearHashTable_Search.cpp  LinkedHashTable_FindMaxMin.cpp  LinkedHashTable_Insert.cpp  LinkedHashTable_Remove.cpp  LinkedHashTable_Search.cpp  Remove_DoubleHashTable.cpp  catch.hpp
timeTest/: Dht_insert.ans  Dht_remove.ans  Dht_search.ans  linearht_insert.ans  linearht_remove.ans  linearht_search.ans  linkht_insert.ans  linkht_remove.ans  linkht_search.ans
